# scrolllock-led-daemon

./: .gitignore  .releaserc  99-scrolllock-led-daemon.rules  CHANGELOG.md  Makefile  README.md  pyproject.toml  scrolllock-led-daemon.8
.github/workflows/: ci.yml  github-release-assets.yml  publish-release.yml  pypi.yml  release.yml  version.yml
completions/: scrolllock-led-daemon.bash
debian/: changelog  control  copyright  debhelper-build-stamp  files  install  postinst  postrm  prerm  rules  scrolllock-led-daemon.8  scrolllock-led-daemon.bash-completion  scrolllock-led-daemon.dirs  scrolllock-led-daemon.manpages  scrolllock-led-daemon.postrm.debhelper  scrolllock-led-daemon.service
debian/scrolllock-led-daemon/DEBIAN/: conffiles  control  md5sums  postinst
debian/scrolllock-led-daemon/etc/: scrolllock-led-daemon.conf
debian/scrolllock-led-daemon/usr/share/doc/scrolllock-led-daemon/: README.md
debian/source/: options
docs/: GUIA_PUBLICACAO_AUTOMATIZADA.md
scripts/: gpg-ci-wrapper.sh  install.sh  prepare_release.py  uninstall.sh
src/: scrolllock_led_daemon.py
systemd/: scrolllock-led-daemon.service
tests/: test_daemon.py  test_evdev_contract.py
